add some basic instructions of use plus funky JVM opts for low latency GC pauses